[package]
name = "potato"
version = "0.1.0"
authors = ["salamander"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.3+1.3.251", features =  ["linked"] }
simple_logger = "4.2.0"
winit = "0.28.6"
num = "0.4.1"
log = "0.4.19"
memoffset = "0.9.0"
cgmath = "0.18.0"


[features]
default = ["wayland"]
wayland = []
