[package]
name = "potato"
version = "0.1.0"
authors = ["salamander"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.3"
simple_logger = "1.13.0"
winit = "0.25.0"
num = "0.4.0"
log = "0.4.11"
memoffset = "0.6.4"
cgmath = "0.18.0"


[features]
default = ["wayland"]
wayland = []